--- a/package.json
+++ b/package.json
@@ -42,13 +42,10 @@
     "ts-jest": "^26.5.1",
     "typescript": "^4.1.5"
   },
-  "peerDependencies": {
-    "io-ts": "^2.2.16"
-  },
   "dependencies": {
     "fp-ts": "^2.9.5",
     "io-ts": "^2.2.16",
-    "monocle-ts": "2.3.5",
+    "monocle-ts": "^2.3.5",
     "newtype-ts": "^0.3.4"
   },
   "scripts": {
