feat: remove internal apis from d.ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
     "lib": ["esnext", "dom"],
     "outDir": "./dist",
     "jsx": "react",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "stripInternal": true
   },
   "include": ["./src"],
   "exclude": ["./src/__typetests__", "./src/__tests__"]
