--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "@semantic-release/release-notes-generator": "^9.0.1",
     "@types/jest": "^26.0.20",
     "cz-conventional-changelog": "3.3.0",
+    "danger": "10.7.1",
     "dts-jest": "^23.3.0",
     "husky": "^5.1.1",
     "io-ts-types": "^0.5.15",
     "is-ci": "^3.0.0",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
+    "lodash": "4.17.21",
     "pinst": "^2.1.6",
     "prettier": "^2.2.1",
     "semantic-release": "^17.3.9",
