--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -17,6 +17,12 @@ jobs:
       - name: yarn install
         run: yarn install
 
+      - name: build
+        run: yarn build
+
+      - name: test
+        run: yarn test
+
       - name: Danger
         run: yarn danger ci
         env:
