--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -9,13 +9,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-      - name: Use Node.js 16.x
-        uses: actions/setup-node@master
+      - uses: actions/setup-node@v2
         with:
-          node-version: 16.x
+          node-version: '16.x'
+          registry-url: 'https://npm.pkg.github.com/'
 
       - name: yarn install
         run: yarn install
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: build
         run: yarn build
