--- a/package.json
+++ b/package.json
@@ -25,14 +25,19 @@
   "devDependencies": {
     "@commitlint/cli": "^12.0.0",
     "@commitlint/config-conventional": "^12.0.0",
+    "@fido-id/danger-plugin-eslint": "1.0.0",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/git": "^9.0.0",
     "@semantic-release/npm": "^7.0.10",
     "@semantic-release/release-notes-generator": "^9.0.1",
     "@types/jest": "^26.0.20",
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "@typescript-eslint/parser": "^5.9.1",
     "cz-conventional-changelog": "3.3.0",
     "danger": "10.7.1",
+    "danger-plugin-conventional-commitlint": "^2.0.0",
     "dts-jest": "^23.3.0",
+    "eslint": "8.7.0",
     "husky": "^5.1.1",
     "io-ts-types": "^0.5.15",
     "is-ci": "^3.0.0",
@@ -57,9 +62,6 @@
     "lint:check": "prettier -c src/",
     "lint:staged": "lint-staged",
     "postinstall": "is-ci || husky install",
-    "postpublish": "pinst --enable",
-    "postversion": "cp -r package.json ..",
-    "prepublishOnly": "pinst --disable",
     "release-dry": "yarn build && semantic-release -d --no-ci --debug",
     "test": "yarn test:type && yarn test:runtime",
     "test:runtime": "jest --config=jest.config.js --passWithNoTests",
