--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "dts-jest": "^23.3.0",
     "husky": "^5.1.1",
     "io-ts-types": "^0.5.15",
+    "io-ts": "^2.2.16",
+    "monocle-ts": "^2.3.5",
+    "newtype-ts": "^0.3.4",
     "is-ci": "^3.0.0",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
@@ -44,10 +47,7 @@
     "typescript": "^4.1.5"
   },
   "dependencies": {
-    "fp-ts": "^2.9.5",
-    "io-ts": "^2.2.16",
-    "monocle-ts": "^2.3.5",
-    "newtype-ts": "^0.3.4"
+    "fp-ts": "^2.9.5"
   },
   "scripts": {
     "build": "rm -rf ./dist && tsc && cp package.json README.md ./dist",
